[gd_scene load_steps=8 format=3 uid="uid://bp6kelnxloeu"]

[ext_resource type="Script" path="res://Scripts/Game/Card.gd" id="1_oo0sj"]
[ext_resource type="Texture2D" uid="uid://de4ys11e1mlox" path="res://Resources/Card.png" id="2_gkp3r"]
[ext_resource type="Texture2D" uid="uid://brpi8icm35mnd" path="res://Resources/Images/Card0.png" id="3_t58ka"]
[ext_resource type="FontFile" uid="uid://b4cn53nlm347x" path="res://MoriaCitadel.TTF" id="4_451og"]
[ext_resource type="Texture2D" uid="uid://c8gg00c35k182" path="res://Resources/GameCard_Up.png" id="5_o87nf"]
[ext_resource type="Texture2D" uid="uid://b8be2r4qvylo3" path="res://Resources/GameCard_Down.png" id="6_8kj53"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvtci"]
size = Vector2(600, 820.001)

[node name="Card" type="Area2D" groups=["Card", "Deactivable"]]
visibility_layer = 3
z_as_relative = false
scale = Vector2(0.1, 0.1)
script = ExtResource("1_oo0sj")
metadata/_edit_vertical_guides_ = [-222.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -7
position = Vector2(-2.29478e-05, 2.38419e-05)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_yvtci")

[node name="Border Total" type="Sprite2D" parent="." groups=["Border", "Total"]]
z_index = -3
z_as_relative = false
position = Vector2(1.24176e-07, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gkp3r")

[node name="Sprite" type="Sprite2D" parent="Border Total" groups=["Sprite"]]
visibility_layer = 3
z_index = -4
z_as_relative = false
position = Vector2(0, -200)
scale = Vector2(1.21953, 1.21953)
texture = ExtResource("3_t58ka")

[node name="Attack" type="Label" parent="Border Total" groups=["Attack"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1191.0
offset_top = -660.0
offset_right = -991.0
offset_bottom = -460.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="Border Total" groups=["Health"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -660.0
offset_right = -16.0
offset_bottom = -460.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Speed" type="Label" parent="Border Total" groups=["Speed"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1146.0
offset_top = -215.0
offset_right = -1046.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Weight" type="Label" parent="Border Total" groups=["Weight"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -215.0
offset_right = -66.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Cost" type="Label" parent="Border Total" groups=["Cost"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1136.0
offset_top = -1980.0
offset_right = -986.0
offset_bottom = -1830.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 85
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Border Total" groups=["Name"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.073
anchor_right = 0.5
anchor_bottom = 0.073
offset_left = -966.0
offset_top = -1066.92
offset_right = -246.0
offset_bottom = -973.92
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 45
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Gene" type="Label" parent="Border Total" groups=["Gene"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.294
anchor_top = 0.73
anchor_right = 0.294
anchor_bottom = 0.73
offset_left = -756.328
offset_top = -1049.2
offset_right = -456.328
offset_bottom = -989.2
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 35
text = "Gene"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Deviation" type="Label" parent="Border Total" groups=["Deviation"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.706
anchor_top = 0.73
anchor_right = 0.706
anchor_bottom = 0.73
offset_left = -755.672
offset_top = -1055.2
offset_right = -455.672
offset_bottom = -983.2
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 35
text = "Deviation"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Effect" type="Label" parent="Border Total" groups=["Effect"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.450495
anchor_top = 0.833196
anchor_right = 0.533003
anchor_bottom = 0.843
offset_left = -986.0
offset_top = -1159.72
offset_right = -206.0
offset_bottom = -879.72
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 40
text = "Effect..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Type" type="Label" parent="Border Total" groups=["Type"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.88
anchor_top = 0.064
anchor_right = 0.88
anchor_bottom = 0.064
offset_left = -666.56
offset_top = -1070.56
offset_right = -546.56
offset_bottom = -970.56
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 30
text = "Type"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Base" type="Label" parent="Border Total" groups=["Base"]]
z_index = -2
z_as_relative = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.937
anchor_right = 0.5
anchor_bottom = 0.937
offset_left = -866.0
offset_top = -1049.48
offset_right = -346.0
offset_bottom = -989.48
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.286275, 0.152941, 0.0509804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 35
text = "Base"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Border Up" type="Sprite2D" parent="." groups=["Border", "Up"]]
visible = false
z_index = -3
z_as_relative = false
scale = Vector2(0.795213, 0.795213)
texture = ExtResource("5_o87nf")

[node name="Sprite" type="Sprite2D" parent="Border Up" groups=["Sprite"]]
visibility_layer = 3
z_index = -4
z_as_relative = false
position = Vector2(0, -12.5753)
scale = Vector2(0.735356, 0.75182)
texture = ExtResource("3_t58ka")

[node name="Border Down" type="Sprite2D" parent="Border Up" groups=["Border", "Down"]]
visibility_layer = 3
z_index = -7
z_as_relative = false
texture = ExtResource("6_8kj53")

[node name="Attack" type="Label" parent="Border Up" groups=["Attack"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -753.258
offset_top = -1040.16
offset_right = -553.258
offset_bottom = -840.161
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 65
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="Border Up" groups=["Health"]]
z_index = -2
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.371
offset_top = -1040.16
offset_right = 12.6289
offset_bottom = -840.161
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 65
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Speed" type="Label" parent="Border Up" groups=["Speed"]]
z_index = -6
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -728.107
offset_top = -147.318
offset_right = -628.107
offset_bottom = -47.3176
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Weight" type="Label" parent="Border Up" groups=["Weight"]]
z_index = -6
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.495
offset_top = -147.318
offset_right = -24.4951
offset_bottom = -47.3176
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_451og")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Common Effects" type="Node" parent="." groups=["Effects"]]

[node name="OnDraw" type="Node" parent="Common Effects" groups=["OnDraw"]]

[node name="OnSpecial" type="Node" parent="Common Effects" groups=["OnSpecial"]]

[node name="Rise" type="Node" parent="Common Effects" groups=["Rise"]]

[node name="Heritage" type="Node" parent="Common Effects" groups=["Heritage"]]

[node name="Guard" type="Node" parent="Common Effects" groups=["Guard"]]

[node name="Accuracy" type="Node" parent="Common Effects" groups=["Accuracy"]]

[node name="Rage" type="Node" parent="Common Effects" groups=["Rage"]]

[node name="Revenge" type="Node" parent="Common Effects" groups=["Revenge"]]

[node name="OnDeploy" type="Node" parent="Common Effects" groups=["OnDeploy"]]

[node name="OnBoost" type="Node" parent="Common Effects" groups=["OnBoost"]]

[node name="Zippy" type="Node" parent="Common Effects" groups=["Zippy"]]

[node name="DeadWeight" type="Node" parent="Common Effects" groups=["DeadWeight"]]

[node name="SweetSong" type="Node" parent="Common Effects" groups=["SweetSong"]]

[node name="Tunnel" type="Node" parent="Common Effects" groups=["Tunnel"]]

[node name="Bane" type="Node" parent="Common Effects" groups=["Bane"]]

[node name="SuperBane" type="Node" parent="Common Effects" groups=["SuperBane"]]

[node name="Raising" type="Node" parent="Common Effects" groups=["Raising"]]

[node name="Phase Mutation" type="Node" parent="Common Effects" groups=["Phase Mutation"]]

[node name="Turn Mutation" type="Node" parent="Common Effects" groups=["Turn Mutation"]]

[node name="onTurnBegin" type="Node" parent="Common Effects" groups=["onTurnBegin"]]

[node name="onPhaseBegin" type="Node" parent="Common Effects" groups=["onPhaseBegin"]]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
